jenkins/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
        - name: http
          containerPort: 8080
        - name: jnlp
          containerPort: 50000
        volumeMounts:
        - name: jenkins-config
          mountPath: /var/jenkins_casc.yml
          subPath: jenkins_casc.yml
        - name: jenkins-home
          mountPath: /var/jenkins_home
        - name: jenkins-ref
          mountPath: /usr/share/jenkins/ref
        - name: pipeline-config
          mountPath: /var/jenkins_home/pipelines
      volumes:
      - name: jenkins-ref
        emptyDir: {}
      - name: jenkins-home
        emptyDir: {}
      - name: jenkins-config
        configMap:
          name: jenkins-config
      - name: pipeline-config
        configMap:
          name: pipeline-config
