jenkins/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    app: jenkins
  ports:
  - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: discovery
  namespace: jenkins
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
  - name: jnlp
    port: 50000
    targetPort: jnlp
