jenkins/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - http:
      paths:
      - path:
        backend:
          serviceName: jenkins
          servicePort: 8080
